--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,12 @@ body {
 
 @media only screen and (max-width: 1200px) {
   body {
-    font-size: 14px;
+    font-size: 1.5rem;
   }
 }
 @media only screen and (max-width: 800px) {
   body {
-    font-size: 12px;
+    font-size: 1rem;
   }
 }
 
